# AtEase-simulator

./: .gitignore  README.md  config.yaml.example  index.html  package-lock.json  package.json  vite.config.ts
examples/: config.yaml
examples/apps/: about-piforma.desktop  limewire.desktop  terminal.desktop  weather.desktop
scripts/: inspect-page.js  install-system-service.sh  screenshot.js
src/: app.ts  config.ts  main.ts  styles.css  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  desktop_apps.rs  desktop_file.rs  icons.rs  launcher.rs  main.rs  model.rs  paths.rs  runtime_config.rs
