[package]
name = "atease"
version = "0.1.0"
description = "Classic Mac-inspired Linux launcher shell"
authors = ["AtEase contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
anyhow = "1.0"
dirs = "6.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shell-words = "1.1"
tauri = { version = "2.8.0", features = [] }
tauri-plugin-log = "2.6.0"
thiserror = "2.0"
url = "2.5"
walkdir = "2.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
